syntax = "proto3";
package msg;
import "core.types.proto";
option go_package = '.;msg';

/*
    Creation Time: 2018 - Nov - 28
    Created by:  (ehsan)
    Maintainers:
       1.  Ehsan N. Moosa (E2)
    Auditor: Ehsan N. Moosa (E2)
    Copyright Ronak Software Group 2018
*/

// MessageActionGroupAddUser
message MessageActionGroupAddUser {
    repeated int64 UserIDs = 1 [jstype = JS_STRING];
}

// MessageActionGroupDeleteUser
message MessageActionGroupDeleteUser {
    repeated int64 UserIDs = 1 [jstype = JS_STRING];
}

// MessageActionGroupCreated
message MessageActionGroupCreated {
    string GroupTitle = 1;
    repeated int64 UserIDs = 2 [jstype = JS_STRING];
}

// MessageActionGroupTitleChanged
message MessageActionGroupTitleChanged {
    string GroupTitle = 1;
}

// MessageActionGroupPhotoChanged
message MessageActionGroupPhotoChanged {
    GroupPhoto Photo = 1;
}

// MessageActionClearHistory
message MessageActionClearHistory {
    int64 MaxID = 1;
    bool Delete = 2;
}

// MessageActionContactRegistered
message MessageActionContactRegistered {

}

// MessageActionScreenShotTaken
message MessageActionScreenShotTaken {
    int64 MinID = 1;
    int64 MaxID = 2;
}

// MessageActionThreadClosed
message MessageActionThreadClosed {
    int64 ThreadID = 1;
}