syntax = "proto3";
package msg;
import "core.types.proto";



/*
    Creation Time: 2018 - Nov - 28
    Created by:  (ehsan)
    Maintainers:
       1.  Ehsan N. Moosa (E2)
    Auditor: Ehsan N. Moosa (E2)
    Copyright Ronak Software Group 2018
*/

// Document Type
enum DocumentType {
    DocumentTypeUnknown = 0;
    DocumentTypePhoto = 1;
    DocumentTypeVoice = 2;
    DocumentTypeVideo = 3;
    DocumentTypeWebPage = 4;
    DocumentTypeReserved1 = 5;
    DocumentTypeReserved2 = 6;
    DocumentTypeReserved3 = 7;
    DocumentTypeReserved4 = 8;
}


// DocumentAttributeType
enum DocumentAttributeType {
    AttributeTypeNone = 0;
    AttributeTypeAudio = 1;
    AttributeTypeVideo = 2;
    AttributeTypePhoto = 3;
    AttributeTypeFile = 4;
    AttributeTypeAnimated = 5;
    AttributeTypeVoiceCall = 6;
    AttributeReserved2 = 7;
    AttributeReserved3 = 8;
    AttributeReserved4 = 9;
}

message DocumentAttributeVoiceCall {
    uint32 MaxCallAttempts = 1;
    uint32 CallAttemptSleep = 2;    // In Seconds
}

// DocumentAttributeAudio
message DocumentAttributeAudio {
    bool Voice = 1;
    uint32 Duration = 2;
    string Title = 3;
    string Performer = 4;
    string Album = 5;
    bytes Waveform = 6;
}

// DocumentAttributeVideo
message DocumentAttributeVideo {
    uint32 Width = 1;
    uint32 Height = 2;
    uint32 Duration = 3;
    bool Round = 4;
}

// DocumentAttributePhoto
message DocumentAttributePhoto {
    uint32 Width = 1;
    uint32 Height = 2;
}

// DocumentAttributeFile
message DocumentAttributeFile {
    string Filename = 1;
}

// DocumentAttributeAnimated
message DocumentAttributeAnimated {
    bool Sound = 1;
}

// DocumentAttribute
message DocumentAttribute {
    DocumentAttributeType Type = 1;
    bytes Data = 2;
}

// Document
message Document {
    int64 ID = 1 [jstype = JS_STRING];
    fixed64 AccessHash = 2 [jstype = JS_STRING];
    int64 Date = 3;
    string MimeType = 4;
    int32 FileSize = 5;
    int32 Version = 6;
    int32 ClusterID = 7;
    repeated DocumentAttribute Attributes = 8;
    FileLocation Thumbnail = 9;
    string MD5Checksum = 10;
    bytes TinyThumbnail = 11;
}

// InputMediaWebDocument
message InputMediaWebDocument {
    string Url = 1;
    int32 DocSize = 2;
    string MimeType = 3;
    repeated DocumentAttribute Attributes = 4;
}

// MediaWebDocument
message MediaWebDocument {
    string Url = 1;
    int32 DocSize = 2;
    string MimeType = 3;
    repeated DocumentAttribute Attributes = 4;
    fixed64 AccessHash = 5 [jstype = JS_STRING];
}

// MediaWebPage
message MediaWebPage {

}

// InputMediaContact
message InputMediaContact {
    string Phone = 1;
    string FirstName = 2;
    string LastName = 3;
    string VCard = 4;
}

// MediaContact
message MediaContact {
    string Phone = 1;
    string FirstName = 2;
    string LastName = 3;
    string VCard = 4;
}

// InputMediaUploadedDocument
message InputMediaUploadedDocument {
    InputFile File = 1;
    InputFile Thumbnail = 2;
    string MimeType = 3;
    string Caption = 4;
    repeated InputDocument Stickers = 5;
    repeated DocumentAttribute Attributes = 6;
    repeated MessageEntity Entities = 7;
    bytes TinyThumbnail = 8;
}

// InputMediaDocument
message InputMediaDocument {
    string Caption = 1;
    InputDocument Document = 2;
    repeated MessageEntity Entities = 3;
    InputFile Thumbnail = 4;
    repeated DocumentAttribute Attributes = 5;
    bytes TinyThumbnail = 6;
}

// InputMediaMessageDocument
message InputMediaMessageDocument {
    InputPeer Peer = 1;
    int64 MessageID = 2;
    string Caption = 3;
    repeated MessageEntity Entities = 4;
}

// MediaDocument
message MediaDocument {
    string Caption = 1;
    int32 TTLinSeconds = 2; // Seconds
    Document Doc = 3;
    repeated MessageEntity Entities = 4;
}

// InputMediaGeoLocation
message InputMediaGeoLocation {
    float Lat = 1;
    float Long = 2;
    string Caption = 3;
    repeated MessageEntity Entities = 4;
}

// MediaGeoLocation
message MediaGeoLocation {
    float Lat = 1;
    float Long = 2;
    string Caption = 3;
    repeated MessageEntity Entities = 4;
}

// InputMediaPoll
message InputMediaPoll {
    MediaPoll Poll = 1;
}

// MediaPoll
message MediaPoll {
    int64 ID = 1;
    bool Closed = 2;
    bool PublicVoters = 3;
    bool MultiChoice = 4;
    bool Quiz = 5;
    string Question = 6;
    repeated PollAnswer Answers = 7;
}

// PollAnswer
message PollAnswer {
    string Text = 1;
    bytes Option = 2;
}

// PollResults
message PollResults {
    repeated PollAnswerVoters Results = 1;
    int64 TotalVoters = 2;
}

// PollAnswerVoters
message PollAnswerVoters {
    bool Chosen = 1; // Whether User has chosen this answer
    bool Correct = 2; // For Quiz Polls
    bytes Option = 3;
    int64 Voters = 4; // Number of voters chosen this option

}